* libltdl/Makefile.am (ltdl.lo): Add dependencies. * libltdl/configure.in: Clean up some duplicate defines. * libltdl/acconfig.h: New file.  Add #undefs for defines that would be duplicated.

--- a/libltdl/Makefile.am
+++ b/libltdl/Makefile.am
@@ -20,6 +20,9 @@ libltdl_la_LIBADD = $(LIBADD_DL)
 libltdlc_la_SOURCES = ltdl.c
 libltdlc_la_LIBADD = $(LIBADD_DL)
 
+## Because we do not have automatic dependency tracking:
+ltdl.lo: ltdl.h config.h
+
 $(OBJECTS): libtool
 libtool: $(LIBTOOL_DEPS)
 	$(SHELL) ./config.status --recheck
