* Makefile.am (install-data-hook):  make sure the install directory is not left world writable. Reported by Andreas Schwab  <schwab@issan.cs.uni-dortmund.de>

--- a/Makefile.am
+++ b/Makefile.am
@@ -102,6 +102,7 @@ configure-subdirs distdir: $(DIST_MAKEFILE_LIST)
 # Create and install libltdl
 install-data-hook:
 	cd libltdl && $(MAKE) distdir distdir=$(DESTDIR)$(pkgdatadir)/libltdl
+	chmod 755 $(DESTDIR)$(pkgdatadir)/libltdl
 
 # Uninstall libltdl
 uninstall-local:
