* ltconfig.in (solaris2.6, whole_archive_flag_spec): Do not use -Wl for allextract.

--- a/ltconfig.in
+++ b/ltconfig.in
@@ -1370,7 +1370,7 @@ else
     case "$host_os" in
     solaris2.[0-5] | solaris2.[0-5].*) ;;
     *) # Supported since Solaris 2.6 (maybe 2.5.1?)
-      whole_archive_flag_spec='${wl}-z ${wl}allextract$convenience ${wl}-z ${wl}defaultextract' ;;
+      whole_archive_flag_spec='-z allextract$convenience -z defaultextract' ;;
     esac
     link_all_deplibs=yes
     ;;
