--- a/libltdl/configure.in
+++ b/libltdl/configure.in
@@ -88,8 +88,8 @@ if test x"$libltdl_cv_preloaded_symbols" = x"yes"; then
 fi
 
 LIBADD_DL=
-AC_CHECK_FUNC(dlopen, [AC_DEFINE(HAVE_LIBDL, 1)],
-[AC_CHECK_LIB(dl, dlopen, [AC_DEFINE(HAVE_LIBDL, 1) LIBADD_DL="-ldl"])])
+AC_CHECK_LIB(dl, dlopen, [AC_DEFINE(HAVE_LIBDL, 1) LIBADD_DL="-dl"],
+[AC_CHECK_FUNC(dlopen, [AC_DEFINE(HAVE_LIBDL, 1)])])
 AC_CHECK_FUNC(shl_load, [AC_DEFINE(HAVE_SHL_LOAD, 1)],
 [AC_CHECK_LIB(dld, shl_load, [AC_DEFINE(HAVE_SHL_LOAD, 1) LIBADD_DL="-ldld"])])
 AC_CHECK_LIB(dld, dld_link, [AC_DEFINE(HAVE_DLD, 1)dnl
