* NEWS: updated * TODO: -Wc, -Wl, implemented * AUTHORS: changed my email address * doc/libtool.texi: fix "wierd" typo :) * ltmain.in: linking against convenience libraries was broken,   implemented the "-Wc," "-Wl," "-Xcompiler" "-Xlinker" flag for   compiler and linker-specific flags,   add -lc before we do the deplibs check * ltconfig.in: linkopts -> compiler_flags for $CC and linker_flags   for $LD, link_all_deplibs=yes on IRIX
* NEWS: insert todays date alongside 1.3.1 release.
* Makefile.in: use gnu not gnits rules
* config.guess: synch with gnu common & apply Takabatake-san's
MIPS *000 patch.
* config.sub: synch with gnu common.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,6 @@
 ## Process this file with automake to produce Makefile.in
 
-AUTOMAKE_OPTIONS = 1.3e gnits readme-alpha
+AUTOMAKE_OPTIONS = 1.3e gnu
 
 BUILD_SUBDIRS = . libltdl doc tests
 SUBDIRS = $(BUILD_SUBDIRS)
