--- a/ltmain.in
+++ b/ltmain.in
@@ -802,7 +802,8 @@ compiler."
     convenience=
     old_convenience=
     deplibs=
-    linkopts=
+    compiler_flags=
+    linker_flags=
     dllsearchpath=
     lib_search_path=`pwd`
 
@@ -943,6 +944,29 @@ compiler."
 	    *) xrpath="$xrpath $arg" ;;
 	    esac
 	  fi
+	  prev=
+	  continue
+	  ;;
+	xcompiler)
+	  arg=`$echo "X$arg" | $Xsed -e "$sed_quote_subst"`
+	  case "$arg" in
+	  *[\[\~\#\^\&\*\(\)\{\}\|\;\<\>\?\'\ \	]*|*]*)
+	    arg="\"$arg\""
+	    ;;
+	  esac
+	  compiler_flags="$compiler_flags $arg"
+	  prev=
+	  continue
+	  ;;
+	xlinker)
+	  arg=`$echo "X$arg" | $Xsed -e "$sed_quote_subst"`
+	  case "$arg" in
+	  *[\[\~\#\^\&\*\(\)\{\}\|\;\<\>\?\'\ \	]*|*]*)
+	    arg="\"$arg\""
+	    ;;
+	  esac
+	  linker_flags="$linker_flags $arg"
+	  compiler_flags="$compiler_flags $wl$arg"
 	  prev=
 	  continue
 	  ;;
@@ -1116,6 +1140,39 @@ compiler."
 
       -version-info)
 	prev=vinfo
+	continue
+	;;
+	
+      -Wc,*)
+	arg=`$echo "X$arg" | $Xsed -e "$sed_quote_subst"`
+	case "$arg" in
+	*[\[\~\#\^\&\*\(\)\{\}\|\;\<\>\?\'\ \	]*|*]*)
+	  arg="\"$arg\""
+	  ;;
+	esac
+	flag=`$echo "X$arg" | $Xsed -e 's/^-Wc,//'`
+	compiler_flags="$compiler_flags $flag"
+	;;
+
+      -Wl,*)
+	arg=`$echo "X$arg" | $Xsed -e "$sed_quote_subst"`
+	case "$arg" in
+	*[\[\~\#\^\&\*\(\)\{\}\|\;\<\>\?\'\ \	]*|*]*)
+	  arg="\"$arg\""
+	  ;;
+	esac
+	flag=`$echo "X$arg" | $Xsed -e 's/^-Wl,//'`
+	linker_flags="$linker_flags $flag"
+	compiler_flags="$compiler_flags $wl$flag"
+	;;
+
+      -Xcompiler)
+	prev=xcompiler
+	continue
+	;;
+
+      -Xlinker)
+	prev=xlinker
 	continue
 	;;
 
@@ -1630,9 +1687,9 @@ compiler."
 	*)
 	  abs_ladir=`cd "$ladir" && pwd`
 	  if test -z "$abs_ladir"; then
-            $echo "$modename: warning: cannot determine absolute directory name of \`$dir'" 1>&2
-            $echo "$modename: passing it literally to the linker, although it might fail" 1>&2
-            absdir="$dir"
+	    $echo "$modename: warning: cannot determine absolute directory name of \`$dir'" 1>&2
+	    $echo "$modename: passing it literally to the linker, although it might fail" 1>&2
+	    absdir="$dir"
 	  fi
 	  ;;
 	esac
@@ -1661,9 +1718,10 @@ compiler."
 
 	if test -z "$libdir"; then
 	  # It is a libtool convenience library, so add in its objects.
-	  convenience="$convenience $dir/$old_library"
-	  old_convenience="$old_convenience $dir/$old_library"
-	  deplibs="$deplibs $dir/$old_library"
+	  convenience="$convenience $ladir/$objdir/$old_library"
+	  old_convenience="$old_convenience $ladir/$objdir/$old_library"
+	  deplibs="$deplibs $ladir/$objdir/$old_library"
+	  newdependency_libs="$newdependency_libs $dependency_libs"
 	  continue
 	fi
 
@@ -1881,6 +1939,18 @@ compiler."
       name=$name_save
 
       if test "$build_libtool_libs" = yes; then
+	if test -n "$rpath"; then
+	  case "$host" in
+	  *-*-cygwin* | *-*-mingw* | *-*-os2* | *-*-beos*)
+	    # these systems don't actually have a c library (as such)!
+	    ;;
+	  *)
+	    # Add libc to deplibs on all other systems.
+	    deplibs="$deplibs -lc"
+	    ;;
+	  esac
+	fi
+
 	# Transform deplibs into only deplibs that can be linked in shared.
 	name_save=$name
 	libname_save=$libname
@@ -2091,18 +2161,6 @@ EOF
       
       # Test again, we may have decided not to build it any more
       if test "$build_libtool_libs" = yes; then
-	if test -n "$rpath"; then
-	  case "$host" in
-	  *-*-cygwin* | *-*-mingw* | *-*-os2* | *-*-beos*)
-	    # these systems don't actually have a c library (as such)!
-	    ;;
-	  *)
-	    # Add libc to deplibs on all other systems.
-	    deplibs="$deplibs -lc"
-	    ;;
-	  esac
-	fi
-
 	if test -n "$compile_shlibpath"; then
 	  eval "$shlibpath_var='$compile_shlibpath\$$shlibpath_var'; export $shlibpath_var"
 	fi
@@ -2180,7 +2238,7 @@ EOF
 
 	if test "$thread_safe" = yes && test -n "$thread_safe_flag_spec"; then
 	  eval flag=\"$thread_safe_flag_spec\"
-	  linkopts="$linkopts $flag"
+	  linker_flags="$linker_flags $flag"
 	fi
 
 	# Prepare the list of exported symbols
@@ -2549,9 +2607,9 @@ EOF
 	*)
 	  abs_ladir=`cd "$ladir" && pwd`
 	  if test -z "$abs_ladir"; then
-            $echo "$modename: warning: cannot determine absolute directory name of \`$dir'" 1>&2
-            $echo "$modename: passing it literally to the linker, although it might fail" 1>&2
-            absdir="$dir"
+	    $echo "$modename: warning: cannot determine absolute directory name of \`$dir'" 1>&2
+	    $echo "$modename: passing it literally to the linker, although it might fail" 1>&2
+	    absdir="$dir"
 	  fi
 	  ;;
 	esac
@@ -3450,9 +3508,9 @@ fi\
       if test -n "$old_archive_from_new_cmds" && test "$build_libtool_libs" = yes; then
 	eval cmds=\"$old_archive_from_new_cmds\"
       else
-        # Ensure that we have .o objects in place incase we decided
-        # not to build a shared library, and have fallen back to building
-        # static libs even though --disable-static was passed!
+	# Ensure that we have .o objects in place incase we decided
+	# not to build a shared library, and have fallen back to building
+	# static libs even though --disable-static was passed!
 	for oldobj in $oldobjs; do
 	  if test ! -f $oldobj; then
 	    obj=`$echo "X$oldobj" | $Xsed -e "$o2lo"`
