--- a/ltconfig.in
+++ b/ltconfig.in
@@ -1821,7 +1821,10 @@ freebsd*)
 
 gnu*)
   version_type=linux
-  library_names_spec='${libname}${release}.so$versuffix ${libname}.so'
+  need_lib_prefix=no
+  need_version=no
+  library_names_spec='${libname}${release}.so$versuffix ${libname}${release}.so${major} ${libname}.so'
+  soname_spec='${libname}${release}.so$major'
   shlibpath_var=LD_LIBRARY_PATH
   deplibs_check_method=pass_all
   ;;
